--- a/dotnet-tasks/dotnet-tasks/dotnet-tasks.csproj
+++ b/dotnet-tasks/dotnet-tasks/dotnet-tasks.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
     <PackageReference Include="EPPlus" Version="7.2.2" />
+    <PackageReference Include="ExcelDataReader" Version="3.7.0" />
+    <PackageReference Include="ExcelDataReader.DataSet" Version="3.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
